Added a movement function to the robot and implemented control via keyboard input.

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Three.js 簡単なプロジェクト</title>
-    <!-- スタイルシート -->
+    <title>A robot</title>
     <link rel="stylesheet" href="/style/style.css">
 </head>
 <body>
@@ -13,6 +12,9 @@
         <h1>A Robot</h1>
         <p>Mouse Drag: Rotate View</p>
         <p>Scroll: Zoom</p>
+        <p>Arrow Keys: Move Robot (X, Z)</p>
+        <p>W / Space: Rise Up</p>
+        <p>S: Move Down</p>
     </div>
 
     <!-- Canvas コンテナ -->
